Reworked the login page

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -8,101 +8,60 @@
 @import java.util.Date
 
 @implicitFieldConstructor = @{ FieldConstructor(helpers.horizontalForm.f) }
-
-@main(title = "Login to Proximal") {
-
-  <style type="text/css">
-    body {
-      background: url('@routes.Assets.at("images/learning_lab.jpg")') no-repeat fixed center center / cover transparent;
-      padding-top: 51px;
-      padding-bottom: 70px;
-    }
-  </style>
-  <header>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand"> Proximal Learning </a>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  
+@layouts.registration_layout("Login"){
   @defining( env.providers.values.filter( _.id != UsernamePassword) ) { externalProviders =>
-  <div class="container login-page">
-    <div class="login-wrapper">
-       <form action = "@env.routes.authenticationUrl("userpass")" class="form-horizontal" autocomplete="off" method="POST">
-         <legend>Login to Proximal Learning </legend>
-         <div class="body"> 
-          @errorMsg.map { msg =>
-            <div class="alert alert-danger" role="alert">
-              @Messages(msg)
+    <div class="container" id="login-block">
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4"> 
+          <h3 class="animated bounceInDown">Login to Proximal</h3> 
+          <div class="login-box clearfix animated flipInY">
+            <div class="login-logo">
+              <a><img src="@routes.Assets.at("images/company-logo.png")" alt="Proximal" /></a>
+            </div> 
+            <hr />
+            <div class="login-form">
+              @errorMsg.map { msg =>
+                <div class="alert alert-danger">
+                  @Messages(msg)
+                </div>
+              }
+
+              @request.flash.get("error").map { msg =>
+                <div class="alert alert-danger">
+                  @msg
+                </div>
+              }
+
+              <form action="@env.routes.authenticationUrl("userpass")" class="form-horizontal" autocomplete="off" method="POST"  >
+                @helper.inputText( loginForm("username"), '_label -> Messages("securesocial.signup.email1"), 'placeholder -> "User name")
+                <!-- <input type="text" placeholder="User name" required/> -->
+                 @helper.inputPassword(
+                   loginForm("password"), '_label -> Messages("securesocial.signup.password1"), 'placeholder -> "Password")
+                <!-- <input type="password"  placeholder="Password" required/> -->
+                <button type="submit" class="btn btn-login">Login</button> 
+              </form> 
+              <div class="login-links"> 
+                <a href="@env.routes.resetPasswordUrl">
+                     Forgot password?
+                </a>
+                <br />
+                <a href="@env.routes.signUpUrl">
+                    Don't have an account? <strong>Sign Up</strong>
+                </a>
+              </div>          
             </div>
-           }
-
-          @request.flash.get("success").map { msg =>
-          <div class="alert alert-info">
-            @msg
           </div>
-          }
-
-          @request.flash.get("error").map { msg =>
-          <div class="alert alert-danger">
-            @msg
+          
+          <div class="social-login row">
+            <div class="fb-login col-lg-6 col-md-12 animated flipInX">
+              <a href="@env.routes.authenticationUrl("facebook")" class="btn btn-facebook btn-block">Connect with <strong>Facebook</strong></a>
+            </div>
+            <div class="twit-login col-lg-6 col-md-12 animated flipInX">
+              <a href="@env.routes.authenticationUrl("google")" class="btn btn-twitter btn-block">Connect with <strong>Google</strong></a>
+            </div>
           </div>
-          }
-          @if( UsernamePasswordProvider.withUserNameSupport ) {
-            @helper.inputText( loginForm("username"),'_label -> Messages("securesocial.signup.username"),'class -> "input-xlarge form-control")
-          } else {
-            @helper.inputText( loginForm("username"), '_label -> Messages("securesocial.signup.email1"), 'class -> "input-xlarge form-control")
-         }
-         @helper.inputPassword(
-         loginForm("password"), '_label -> Messages("securesocial.signup.password1"), 'class -> "input-xlarge form-control")
-
-           <div class="form-group">
-             <div class="col-xs-offset-4 col-xs-8">
-              <button class="btn btn-primary btn-block" type="submit"> @Messages("securesocial.login.title") </button>
-             </div>
-           </div>
-         </div>
-
-         
-          <div class="clearfix">
-           <p><a href="@env.routes.resetPasswordUrl">@Messages("securesocial.login.forgotPassword") </a></p>
-         </div>
-         @if(Play.current.configuration.getBoolean("securesocial.registrationEnabled").getOrElse(true) ){
-         <div class="clearfix">
-           <p>@Messages("securesocial.login.signUp") <a href="@env.routes.signUpUrl">@Messages("securesocial.login.here")</a></p>
-         </div>
-         @if( externalProviders.size > 0 ) {
-          <div class="clearfix">
-            <p> Or @Messages("securesocial.login.instructions")</p>
-            <p>
-              <a href="@env.routes.authenticationUrl("google")">Google </a>
-              <a href="@env.routes.authenticationUrl("facebook")">Facebook </a>
-            </p>
-        </div>
-        }
-
-         }
-      </form>
-    </div>
-  </div>
-  
-     
-  }
-  <footer>
-    <nav class="navbar navbar-default navbar-fixed-bottom"
-                        role="navigation" style="background-color:#fff;">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <span class="navbar-brand">
-            <span class="small copyright"> © Poximal Learning LLC @{new Date().format("yyyy")} </span>
-          </span>
         </div>
       </div>
-    </nav>
-  </footer>
-
-}
+    </div>
+  }
+ }
