--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -16,7 +16,7 @@
           <h3 class="animated bounceInDown">Login to Proximal</h3> 
           <div class="login-box clearfix animated flipInY">
             <div class="login-logo">
-              <a><img src="@routes.Assets.at("images/company-logo.png")" alt="Proximal" /></a>
+              <a><img src="@routes.Assets.at("images/graduation-cap.png")" alt="Proximal" /></a>
             </div> 
             <hr />
             <div class="login-form">
