--- a/app/views/layouts/registration_layout.scala.html
+++ b/app/views/layouts/registration_layout.scala.html
@@ -13,7 +13,7 @@
     @content
     <!-- End Login box -->
     <footer class="container">
-      <p id="footer-text"><small>Copyright &copy; 2013 <a href="http://ad-says.com/">AdSays Creation Pvt. Ltd.</a></small></p>
+      <p id="footer-text"><small>Copyright &copy; @( (new org.joda.time.DateTime()).getYear()) <a href="">Proximal Labs LLC</a></small></p>
     </footer>
   </body>
 </html>
