--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -48,6 +48,7 @@
 
     <!-- Factories -->
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/person_service.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/services/child_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/standards_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/common_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/questions_service.js")"> </script> 
