starting to add the answers to questions

--- a/app/assets/stylesheets/widget.less
+++ b/app/assets/stylesheets/widget.less
@@ -46,6 +46,10 @@ margin-left: 5px;
 div.alert {
 margin-bottom: 10px;
 }
+&.xlarge {
+ min-height: 600px;
+ overflow-y: none;
+}
 &.large {
 height: 450px;
 overflow-y: auto;
