More questions workflow

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -58,6 +58,9 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/standards/standards_controller.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/questions_controller.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/questions_directive.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/add/add_question_controller.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/questions/edit/edit_questions_controller.js")"> </script> 
+    
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/children_directive.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/dashboard/dashboard_controller.js")"> </script>
