--- a/app/assets/javascripts/children/view/view_child.html
+++ b/app/assets/javascripts/children/view/view_child.html
@@ -1,11 +1,5 @@
-<div class="row col-md-12" style="padding-top: 10px">
-    <button type="button" class="close" close-inner-page="child-view">
-      <span aria-hidden="true" >&times;</span><span class="sr-only">Close</span>
-    </button>
-</div>
-
 <div class="row col-md-12 toolbar">
-  <div class="col-md-4" child-photo> </div> 
+<div class="col-md-4" child-picture child="child" style="min-height:5em"> </div> 
   <div class="col-md-4"> 
     <h4> {{child.firstName + ' ' + child.lastName}} </h4>
   </div>
@@ -14,7 +8,12 @@
   </div>
 </div>
 <tabset>
-  <tab heading="Static title">Static content</tab>
+  
+  <tab heading="New Assessment">
+    Static content 
+  </tab>
+
+
   <tab ng-repeat="tab in childCtrl.tabs" heading="{{tab.title}}" active="tab.active" disabled="tab.disabled">
     {{tab.content}}
   </tab>
