Fixed markup on the assesment tab

--- a/app/assets/javascripts/children/view/view_child.html
+++ b/app/assets/javascripts/children/view/view_child.html
@@ -1,10 +1,10 @@
 <div class="row col-md-12 toolbar">
-<div class="col-md-4" child-picture child="child" style="min-height:5em"> </div> 
+<div class="col-md-4" child-picture child="childctrl.child" style="min-height:5em"> </div> 
   <div class="col-md-4"> 
-    <h4> {{child.firstName + ' ' + child.lastName}} </h4>
+    <h4> {{childctrl.child.firstName + ' ' + childctrl.child.lastName}} </h4>
   </div>
  <div class="col-md-4">
-    <h4> {{child.educationLevel.description}} </h4>
+    <h4> {{childctrl.child.educationLevel.description}} </h4>
   </div>
 </div>
 
