--- a/app/assets/javascripts/children/view/assesments/assesment.html
+++ b/app/assets/javascripts/children/view/assesments/assesment.html
@@ -1,10 +1,56 @@
-<section class="col-md-12">
+<section class="row"> 
+  <div class="col-lg-12">
+    <div class="col-lg-6 col-md-6 col-xs-12">
+      <div class="widget">
+        <div class="widget-body">
+          <div class="widget-icon green pull-left">
+            <i class="fa fa-bell"></i>
+          </div>
+          <div class="widget-content pull-left"> 
+            <div class="title"> Ready to start a new assesment? </div>
+            <div class="comment"> 
+              <button class="btn btn-primary" ng-click="begin()"> Start here </button> 
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class='row'> 
+  <div class="col-md-12 col-lg-12">  
+    <div class=" col-lg-6">
+      <div class="widget">
+        <div class="widget-header">
+          <i class="fa fa-spinner"></i> Assesments Currently in Progress
+        </div>
+        <div class="widget-body">
+          <ul>
+            <li> this one </li>
+            <li> And this one </li> 
+          </ul>
+         </div>
+      </div>
+    </div>
+    
+    <div class="col-lg-6">
+      <div class="widget">
+        <div class="widget-header">
+          <i class="fa fa-check"></i> Assesments already completed
+        </div>
+        <div class="widget-body">
+          <ul>
+            <li> this one </li>
+            <li> And this one </li> 
+          </ul>
+         <div>
+      </div>
+    </div>
   
-  <span> Begin a new Assesment </span>
-  
-  <br />
-  <span> Continue an unfinished assesment </span>
-  <br />
-  </span> Redo a previously finished assesment </span>
+
+    
+  </div>
 
 </section>
