--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -155,3 +155,13 @@ footer .navbar {
 .fade {
   opacity: .2;
 }
+
+/** Tabs **/
+.tab-content {
+  background-color: rgb(255, 255, 255);
+  height: 80vh;
+  padding-top: 4em;
+  border-right: 1px solid #ddd;
+  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
