Implimented the delete a standard method in all layers of the application

--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -41,11 +41,11 @@
                 <button type="submit" class="btn btn-login">Login</button> 
               </form> 
               <div class="login-links"> 
-                <a href="@env.routes.resetPasswordUrl">
+                <a href="@env.routes.startResetPasswordUrl">
                      Forgot password?
                 </a>
                 <br />
-                <a href="@env.routes.signUpUrl">
+                <a href="@env.routes.startSignUpUrl">
                     Don't have an account? <strong>Sign Up</strong>
                 </a>
               </div>          
