--- a/app/views/registration/startSignup.scala.html
+++ b/app/views/registration/startSignup.scala.html
@@ -23,7 +23,7 @@
                 </div>
               }
               
-              <form action="@env.routes.signUpUrl" class="form-horizontal" autocomplete="off" method="post" > 
+              <form action="@env.routes.startSignUpUrl" class="form-horizontal" autocomplete="off" method="post" > 
                 @helper.inputText( startForm("email"), '_label -> Messages("securesocial.signup.email1"), 'placeholder -> "Provide a Valid Email")
                 <button type="submit" class="btn btn-login">Submit</button> 
               </form> 
