--- a/app/assets/javascripts/children/view/assesments/assesment.html
+++ b/app/assets/javascripts/children/view/assesments/assesment.html
@@ -3,18 +3,19 @@
     <div class="col-lg-6 col-md-6 col-xs-12">
       <div class="widget">
         <div class="widget-body">
-          <div class="widget-icon green pull-left">
+          <!-- <div class="widget-icon green pull-left">
             <i class="fa fa-bell"></i>
-          </div>
+          </div> -->
           <div class="widget-content pull-left"> 
             <div class="title"> Ready to start a new assesment? </div>
             <div class="comment"> 
               <div class="form-group" >
-                <select name="standard" ng-model="standardSelected" class="form-control" ng-options="standard.title for standard in availableStandards" >
+                <select name="standard" ng-model="standardSelected" class="form-control" 
+                        ng-options="standard.title for standard in availableStandards" >
                   <option value=""> -- Choose a Standard -- </option>
                 </select>
               </div>
-              <button class="btn btn-primary" ng-click="begin()"> Start here </button> 
+              <button class="btn btn-primary" ng-click="begin()"> Start Here </button> 
             </div>
           </div>
           <div class="clearfix"></div>
