--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -11,6 +11,7 @@
 @import "animations.less";
 @import "buttons.less";
 @import "simple-sidebar.less";
+@import "steps.less";
 @icon-font-path: "../lib/bootstrap/fonts/";
 
 // Fix FontAwesome font path
