--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -53,6 +53,8 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/common_service.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/services/questions_service.js")"> </script> 
 
+    <!-- Filters -->
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/shared/epoch_time_filter.js")"> </script> 
 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/admin_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/admin/standards/standards_controller.js")"> </script> 
