--- a/app/assets/javascripts/children/view/homework/homework.html
+++ b/app/assets/javascripts/children/view/homework/homework.html
@@ -1,11 +1,9 @@
 <section class="row"> 
   <div class="col-lg-12">
+
     <div class="col-lg-6 col-md-6 col-xs-12">
       <div class="widget">
         <div class="widget-body">
-          <!-- <div class="widget-icon green pull-left">
-            <i class="fa fa-plus"></i>
-          </div> -->
           <div class="widget-content pull-left"> 
             <div class="title"> Add homework </div>
             <div class="comment"> 
@@ -22,5 +20,32 @@
         </div>
       </div>
     </div>
+  </div>
+</section>
+
+<section class='row'> 
+  <div class="col-md-12 col-lg-12">  
+    <div class=" col-lg-6">
+      <div class="widget">
+        <div class="widget-header">
+          <i class="fa fa-spinner"></i> Homework In-Progress
+        </div>
+        <div class="widget-body">
+          
+         </div>
+      </div>
+    </div>
+    
+    <div class="col-lg-6">
+      <div class="widget">
+        <div class="widget-header">
+          <i class="fa fa-check"></i> Homework Finished
+        </div>
+        <div class="widget-body">
+          
+         <div>
+      </div>
+    </div>
+  
   </div>
 </section>
