--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -12,6 +12,7 @@
 @import "buttons.less";
 @import "simple-sidebar.less";
 @import "steps.less";
+@import "ratings.less";
 @icon-font-path: "../lib/bootstrap/fonts/";
 
 // Fix FontAwesome font path
