--- a/app/assets/javascripts/children/view/view_child.html
+++ b/app/assets/javascripts/children/view/view_child.html
@@ -1,10 +1,10 @@
 <div class="row col-md-12 toolbar">
-<div class="col-md-4" child-picture child="childctrl.child" style="min-height:5em"> </div> 
+  <div class="col-md-1 thumbnail">
+    <div child-picture child="childctrl.child" style="min-height:5em"> </div> 
+  </div>  
   <div class="col-md-4"> 
-    <h4> {{childctrl.child.firstName + ' ' + childctrl.child.lastName}} </h4>
-  </div>
- <div class="col-md-4">
-    <h4> {{childctrl.child.educationLevel.description}} </h4>
+      <h4> {{childctrl.child.firstName + ' ' + childctrl.child.lastName}} </h4>
+      <span> {{childctrl.child.educationLevel.description}} </span>  <a title="Move up a grade level"><i class="fa fa-arrow-circle-up"></i></a>  
   </div>
 </div>
 
