--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/angular-toaster.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui/angular-ui.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script>
+    <!-- <script type="text/javascript" src="@routes.Assets.at("lib/bootstrap/js/bootstrap.min.js")"> </script> -->
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/select2/select2.min.js")"> </script>
