--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -68,6 +68,7 @@
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/view_child_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/child_picture_directive.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/assesments/new/new_assesment_directive.js")"> </script> 
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/assesments/new/new_assesment_controller.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/assesments/assesment_controller.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/assesments/assesment_service.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/children/view/homework/homework_controller.js")"> </script>
