--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,17 +17,9 @@
     @content 
     <toaster-container></toaster-container>
     <input type="hidden" name="rootUrl" value="@controllers.routes.ApplicationController.index()" id="rootUrl"/>
+    <script type="text/javascript" src="@routes.Assets.at("bundle.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/jquery/jquery.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-cookies.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-sanitize.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-resource.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-touch.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("javascripts/angular-toaster.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-router/angular-ui-router.min.js")"> </script> 
-    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui/angular-ui.min.js")"> </script>
-    <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"> </script> 
     <script type="text/javascript" src="@routes.Assets.at("lib/lodash/lodash.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/select2/select2.min.js")"> </script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-select/select.min.js")"> </script>
