--- a/web/styles/main.less
+++ b/web/styles/main.less
@@ -153,7 +153,7 @@ footer .navbar {
   opacity: .2;
 }
 
-/** Tabs **/
+/** Tabs 
 .tab-content {
   background-color: rgb(255, 255, 255);
   height: 80vh;
@@ -162,3 +162,4 @@ footer .navbar {
   border-left: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
 }
+**/
