fixed some problems with questions

--- a/web/styles/main.less
+++ b/web/styles/main.less
@@ -5,7 +5,6 @@
 @import "mixins.less";
 @import "sidebar.less";
 @import "widget.less";
-@import "animations.less";
 @import "buttons.less";
 @import "simple-sidebar.less";
 @import "steps.less";
@@ -153,13 +152,11 @@ footer .navbar {
   opacity: .2;
 }
 
-/** Tabs 
+/** Tabs  */
 .tab-content {
   background-color: rgb(255, 255, 255);
-  height: 80vh;
-  padding-top: 4em;
+  padding-top: 2em;
   border-right: 1px solid #ddd;
   border-left: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
 }
-**/
